# Test_COGL_Compute_Shaders

./: .gitmodules  CMakeLists.txt
Test/: CMakeLists.txt  Test.cpp  Test.h
data/: computeTest.cs.glsl  triTest.vs.glsl
